<resources>
    <string name="app_name">Math For Fun</string>
    <string name="practice_btn_txt">Practice</string>
    <string name="learn_btn_txt">Learn</string>
    <string name="progress_btn_txt">Progress</string>
    <string name="next_btn_txt">Next</string>
    <string name="back_btn_txt">Back</string>
    <string name="continue_btn_txt">Continue Game</string>
    <string name="addition_category_txt">Addition</string>
    <string name="multiplication_category_txt">Multiplication</string>
    <string name="division_category_txt">Division</string>
    <string name="fractions_category_txt">Fraction</string>
    <string name="percentages_category_txt">Percentage</string>
    <string name="decimal_numbers_category_txt">Decimal Numbers</string>
    <string name="score_is_zero_txt">Score: 0</string>
    <string name="one_plus_one_equal_to_txt">1 + 1 = ?</string>
    <string name="subtraction_category_txt">Subtraction</string>
    <string name="first_diagnostic_instructions">
        Hello  %1$s, welcome to the Math-For-Fun app! Before we start, we would like to go over some questions with you, the questionnaire will take a few minutes
    </string>

    <string name="to_the_menu">To The Menu</string>
    <string name="msg_right_answer">Well done, you answered %1d questions correctly</string>
    <string name="msg_wrong_answer">You answered %1d questions incorrectly</string>
    <string name="msg_diagnosis_finished">We\'re done...</string>
    <string name="msg_now_can_start">Now the fun begins!</string>
    <string name="good_luck_txt">Good Luck</string>


    <string-array name="category_names">
        <item>Addition</item>
        <item>Subtraction</item>
        <item>Multiplication</item>
        <item>Division</item>
        <item>Fractions</item>
        <item>Percents</item>
        <item>Decimals</item>
    </string-array>

    <string-array name="practice_additionSubCategories">
        <item>Adding Single Digit Numbers</item>
        <item>Adding Double Digit Numbers</item>
    </string-array>

    <string-array name="practice_subtractionSubCategories">
        <item>Subtract Single Digit Numbers</item>
        <item>Subtract Double-Digit Numbers</item>
        <item>Subtraction From 1000</item>
    </string-array>

    <string-array name="practice_multiplicationSubCategories">
        <item>Multiplication Up To 5</item>
        <item>Multiplication Up To 10</item>
        <item>Multiplication at 11</item>
        <item>Multiplication In a Double-Digit Numbers</item>
        <item>Multiplication In a Three-Digit numbers</item>
    </string-array>


    <string-array name="practice_divisionSubCategories">
        <item>Division Up To 5</item>
        <item>Division Up To 10</item>
        <item>Division Of at 10</item>
        <item>Division Double-Digit Numbers In a Single Digit Numbers</item>
        <item>Division Three-Digit Numbers In a Double-Digit Numbers</item>
    </string-array>

    <string-array name="practice_fractionsSubCategories">
        <item>Fractions Expansion – Part1</item>
        <item>Fractions Expansion – Part2</item>
        <item>Fractions Reduction – Part1</item>
        <item>Fractions Reduction – Part 2</item>
        <item>Fractions Expansion – Single And Double Digits Numbers</item>
        <item>Fractions  Reduction  – Single And Double Digits Numbers</item>
        <item>Addition And Subtraction Of Fractions - Prime Denominator</item>
        <item>Addition And Subtraction Of Fractions - Single-Digit Denominator</item>
        <item>Addition And Subtraction Of Fractions - Double-Digit Denominator</item>
        <item>Multiplication Of Fractions - Prime Denominator</item>
        <item>Multiplication Of Fractions - Single-Digit Denominator Part 1</item>
        <item>Multiplication Of Fractions - Single-Digit Denominator Part 2</item>
    </string-array>

    <string-array name="practice_percentsSubCategories">
        <item>Ejecting 1% From a Number</item>
        <item>Ejecting 10% From a Number</item>
        <item>Ejecting 50% From a Number</item>
        <item>Easy Percentages – Part 1</item>
        <item>Easy Percentages – Part 2</item>
        <item>Percent In General</item>
        <item>Percent In GeneraL - Part 1</item>
        <item>Percent In GeneraL - Part 2</item>
    </string-array>

    <string-array name="practice_decimalsSubCategories">
        <item>From Percentage To Decimal Fraction – Part 1</item>
        <item>From Percentage To Decimal Fraction – Part 1</item>
        <item>From Percentage To Decimal Fraction – Part 3</item>
        <item>From Percentage To Decimal Fraction – Part 4</item>
        <item>From Standard Fraction To Decimal Fraction</item>
        <item>From Percentage To Fractions</item>
    </string-array>


    <string-array name="learn_additionSubCategories">
        <item>Simple Adding</item>
    </string-array>


    <string-array name="learn_multiplicationSubCategories">
        <item>Simple Multiplication</item>
        <item>Multiplication In a Double–Digit Numbers Between 10-20</item>
        <item>Multiply In a Double-Digit Numbers, The Rest</item>
        <item>Calculate a Double-Digit Squared Number</item>
    </string-array>


    <string-array name="learn_divisionSubCategories">
        <item>Simple Division</item>
    </string-array>

    <string-array name="learn_fractionsSubCategories">
        <item>Fractions - Part 1</item>
        <item>Fractions - Part 2</item>
        <item>Reduce and Expand Fractions</item>
    </string-array>

    <string-array name="learn_percentsSubCategories">
        <item>Percents</item>
    </string-array>

    <string-array name="learn_decimalsSubCategories">
        <item>From Simple Fraction To Decimal Fraction</item>
        <item>From Decimal Fraction To Simple Fraction</item>
        <item>From Percents To Decimal Fraction</item>
    </string-array>


    <string name="title_learn_sub_categories_option2">What are we going to learn today?</string>
    <string name="title_practice_sub_categores_option2">What are we going to practice today?</string>
    <string name="game_over_txt">Game Over</string>
    <string name="next_level_txt">Next Level</string>
    <string name="successfully_finished_the_level_txt">Successfully finished the level,\ngood job!</string>
    <string name="start_again_txt">Start Again</string>
    <string name="level_finished_txt">Level finished, nice work!</string>
    <string name="btn_start_game_txt">Start Game</string>
    <string name="you_can_do_better_txt">we think you still need more practice, you can do better!</string>
    <string name="btn_cool_lets_go">Cool, let\'s go</string>
    <string name="txt_welcome">Welcome</string>
    <string name="first_name">Name</string>
    <string name="set_birth_year">Set Birth Year</string>
    <string name="register">Register</string>
    <string name="tell_about_yourself">Tell us about yourself</string>
    <string name="tutorial_category_card">Tutorial</string>
    <string name="improvementMessage">Your\'e improving! Keep it up!</string>
    <string name="deteriorationMessage">Maybe consider looking at the materials in the learning page</string>
    <string name="tutorial_show_player">This is you, your goal is to get through the level with the highest score</string>
    <string name="tutorial_game_objective">You get points by answering questions and going through obstacles</string>
    <string name="tutorial_score">Your score is displayed here</string>
    <string name="tutorial_timer">This timer will display the time left to answer</string>
    <string name="in_the_level_x">In The Level %1s</string>
    <string name="you_played_x_times">You Played %1d Times</string>
    <string name="your_high_score_is_x">Your High Score is %1d</string>
    <string name="tutorial_start_button">Start by pressing this button</string>
    <string name="progress_main_title">Here you can track your progress</string>
    <string name="tutorial_obstacle">You need to get over this obstacle</string>
    <string name="tutorial_question">By answering this question before you reach it</string>
    <string name="tutorial_options">These are your answer options, try answering</string>
    <string name="tutorial_correct_answer">Good job! you got a point!</string>
    <string name="tutorial_wrong_answer">That\'s ok, you\'ll get it next time!</string>
    <string name="tutorial_number_of_levels">Each level has 10 questions, but between questions there is a chance for a bonus round</string>
    <string name="tutorial_jump_button">When this button appears it means that bonus round has started</string>
    <string name="tutorial_bonus">Use this button to jump and collect all the fruit for additional points</string>
    <string name="tutorial_end">That\'s all you need to know, happy gaming!</string>
    <string name="settings_sound_title">Sound</string>
    <string name="settings_sound_summary">Enable sound</string>
    <string name="settings_first_name_title">Name</string>
    <string name="settings_first_name_summary">Change name</string>
    <string name="score">"Score : "</string>
    <string name="new_highscore">New highscore!</string>
    <string name="last_category_message">There are no more levels, you finished the game!</string>
    <string name="first_diagnostic_important_info">(it is not possible to leave during the questionaire otherwise the information will be deleted)</string>
    <string name="percent_of">of</string>
    <string name="decimal_question">What is %s in decimal?</string>
    <string name="decimal_to_fraction_question">What is %s in fractions?</string>
    <string name="jump_button">Jump</string>
    <string name="no_more_videos">No more videos</string>
    <string name="about_fruit_asset">Fruits assets by:</string>
    <string name="before_we_start">Just before we start,</string>
    <string name="about_clock">Clock asset by:</string>
    <string name="about_cloud">Cloud asset by:</string>
    <string name="about_character">Character asset by:</string>
    <string name="about_background_music">Game background music by:</string>
    <string name="about_clock_sound">Clock sound by:</string>
    <string name="about_game_background">Game background asset by:</string>
    <string name="about_wrong_answer">Wrong answer sound by:</string>
    <string name="about_correct_answer">Correct answer sound by:</string>
    <string name="app_desctiption">Math For Fun was designed to provide a platform for learning, practicing and improving the fundamentals of math. Using learning algorithms, the app gives the user questions based on their knowledge and helps in the relevant subjects.</string>
    <string name="about_app_title">About Math For Fun</string>
    <string name="settings">Settings</string>
    <string name="missing_fields">Please fill all fields</string>
    <string name="skip">Skip</string>
    <string name="skip_title">Are you sure?</string>
    <string name="skip_dialog_message">If you skip now, we will not know enough about you to adjust future questions.\nSkip diagnosis?</string>
    <string name="about_obstacle_wheelbarrow">wheelbarrow asset by:</string>
    <string name="about_obstacle_ladder">Ladder asset by:</string>
    <string name="about_obstacle_log">Log asset by:</string>
    <string name="about_obstacle_box">Box asset by:</string>
    <string name="about_obstacle_hurdle">Hurdle asset by:</string>
    <string name="about_obstacle_wheel">Wheel asset by:</string>
    <string name="about_obstacle_rock">Rock asset by:</string>
    <string name="subject_closed_title">Subject Closed</string>
    <string name="subject_closed_message">This subject is not open yet, you need to pass the previous subject.\nIf you still want to skip press skip</string>
    <string name="progress_level_finished">You Finished The Level!</string>
    <string name="about_wood_sign">Wood sign asset by:</string>

</resources>
