<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:id="@+id/category_cards_layout_1">

        <androidx.cardview.widget.CardView
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:elevation="8dp"
            app:cardCornerRadius="10dp"
            app:cardUseCompatPadding="true"
            app:contentPadding="5dp"
            android:id="@+id/card_addition_category">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addition_category_txt"
                android:gravity="center"
                android:textSize="15sp"
                android:textStyle="bold"
                style="@style/FontLocalized"
                android:layout_gravity="center" />
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:elevation="8dp"
            app:cardCornerRadius="10dp"
            app:cardUseCompatPadding="true"
            app:contentPadding="5dp"
            android:id="@+id/card_subtraction_category">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subtraction_category_txt"
                android:gravity="center"
                android:textSize="15sp"
                android:textStyle="bold"
                style="@style/FontLocalized"
                android:layout_gravity="center"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:elevation="8dp"
            app:cardCornerRadius="10dp"
            app:cardUseCompatPadding="true"
            app:contentPadding="3dp"
            android:id="@+id/card_multiplication_category">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/multiplication_category_txt"
                android:gravity="center"
                android:textSize="14sp"
                android:textStyle="bold"
                style="@style/FontLocalized"
                android:layout_gravity="center"
                />
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_gravity="center"
        android:id="@+id/category_cards_layout_2">

        <androidx.cardview.widget.CardView
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:elevation="8dp"
            app:cardCornerRadius="10dp"
            app:cardUseCompatPadding="true"
            app:contentPadding="5dp"
            android:id="@+id/card_division_category">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/division_category_txt"
                android:gravity="center"
                android:textSize="15sp"
                android:textStyle="bold"
                style="@style/FontLocalized"
                android:layout_gravity="center"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:elevation="8dp"
            app:cardCornerRadius="10dp"
            app:cardUseCompatPadding="true"
            app:contentPadding="5dp"
            android:id="@+id/card_fractions_category">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fractions_category_txt"
                android:gravity="center"
                android:textSize="15sp"
                android:textStyle="bold"
                style="@style/FontLocalized"
                android:layout_gravity="center"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:elevation="8dp"
            app:cardCornerRadius="10dp"
            app:cardUseCompatPadding="true"
            app:contentPadding="5dp"
            android:id="@+id/card_percentages_category">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/percentages_category_txt"
                android:gravity="center"
                android:textSize="15sp"
                android:textStyle="bold"
                style="@style/FontLocalized"
                android:layout_gravity="center"/>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_gravity="center"
        android:id="@+id/category_cards_layout_3">

        <androidx.cardview.widget.CardView
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:elevation="8dp"
            app:cardCornerRadius="10dp"
            app:cardUseCompatPadding="true"
            app:contentPadding="5dp"
            android:id="@+id/card_decimal_numbers_category">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/decimal_numbers_category_txt"
                android:gravity="center"
                android:textSize="15sp"
                android:textStyle="bold"
                style="@style/FontLocalized"
                android:layout_gravity="center"/>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
    <ListView
        android:layout_width="wrap_content"
        android:layout_margin="10dp"
        android:layout_height="wrap_content"
        style="@style/FontLocalized"
        android:id="@+id/sub_categories_lv">
    </ListView>
</LinearLayout>